syntax = "proto3";

package user_service;

option go_package = "./proto";

service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
}

message CreateUserResponse {
    string message = 1;
}

